test/should_pass/basic_011.grg
actions basic_011;

rule r {
	pattern {
		x : Node;
	}
	modify {
		y : Node;
	}
}

