test/should_fail/ret_006.grg
actions ret_006;

rule r : (Node) {
	pattern {
		x: Node;
		y: Node;
	}
	modify {
		return(x, y);
	}
}

